--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Back-End API for Shoe Store using NodeJS and MySQL",
   "main": "database.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:watch": "jest -c jest.config.js --runInBand --watch --",
+    "test": "jest -c jest.config.js --runInBand --",
+    "coverage": "jest -c jest.config.js --runInBand --coverage",
+    "lint": "eslint --config .eslintrc.js \"./src/**/*.js\" \"tests/**/*.js\"",
+    "start": "node src/index.js",
+    "dev": "LOG_LEVEL=debug nodemon ./src/index.js --watch src",
+    "debug": "LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src",
+    "test:integration": "hurl --test --glob \"tests/integration/**/*.hurl\""
   },
   "keywords": [],
-  "author": "",
+  "author": "Nathan Kenopic",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -17,10 +24,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^9.2.0",
     "pino-http": "^10.1.0",
+    "pino-pretty": "^11.2.1",
     "stoppable": "^1.1.0"
   },
   "devDependencies": {
