--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "stoppable": "^1.1.0"
   },
   "devDependencies": {
-    "helmet": "^7.1.0"
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
+    "helmet": "^7.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.2"
   }
 }
