--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Back-End API for Shoe Store using NodeJS and MySQL",
   "main": "database.js",
   "scripts": {
-    "test:watch": "jest -c jest.config.js --runInBand --watch --",
-    "test": "jest -c jest.config.js --runInBand --",
-    "coverage": "jest -c jest.config.js --runInBand --coverage",
-    "lint": "eslint --config .eslintrc.js \"./src/**/*.js\" \"tests/**/*.js\"",
+    "test:watch": "jest -c jest.config.js --runInBand --forceExit --watch --",
+    "test": "jest -c jest.config.js --runInBand --forceExit --",
+    "coverage": "jest -c jest.config.js --runInBand --forceExit --coverage",
+    "lint": "eslint --config eslint.config.mjs \"./src/**/*.js\"",
     "start": "node src/index.js",
     "dev": "LOG_LEVEL=debug nodemon ./src/index.js --watch src",
     "debug": "LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 ./src/index.js --watch src",
@@ -40,6 +40,7 @@
     "globals": "^15.6.0",
     "helmet": "^7.1.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "supertest": "^7.0.0"
   }
 }
